--- a/demo.html
+++ b/demo.html
@@ -18,20 +18,50 @@
 	Look this div is 6 columns wide
 	</div>
 	</div>
-      <div class="small-3 columns">
+      <div class="small-3 columns" style="border:1px solid black">
 	but this one is 3
 	</div>
-      <div class="small-3 columns">
+      <div class="small-3 columns" style="border:1px solid black">
 	also this one
 	</div>
       </div>
-      <div class="large-6 columns">
-	<div class="medium-4 columns">
-	  This is a nested 4 collum inside a 6 one
-	  </div>
-	<div class="medium-2 columns">
-	  and this one is two
-	  </div>
+      <div class="large-12 columns">
+	<div class="small-1 columns" style="background-color:red">
+	  1
+	</div>
+	<div class="small-1 columns" style="background-color:blue">
+	  2
+	</div>
+	<div class="small-1 columns" style="background-color:green">
+	  3
+	</div>
+	<div class="small-1 columns" style="background-color:yellow">
+	  4
+	</div>
+	<div class="small-1 columns" style="background-color:purple">
+	  5
+	</div>
+	<div class="small-1 columns" style="background-color:teal">
+	  6
+	</div>
+	<div class="small-1 columns" style="background-color:aqua">
+	  7
+	</div>
+	<div class="small-1 columns" style="background-color:orange">
+	  8
+	</div>
+	<div class="small-1 columns" style="background-color:lime">
+	  9
+	</div>
+	<div class="small-1 columns" style="background-color:olive">
+	  10
+	</div>
+	<div class="small-1 columns" style="background-color:gray">
+	  11
+	</div>
+	<div class="small-1 columns" style="background-color:brown">
+	  12
+	</div>
       </div>
       </div>
       Look at how it changes when you resize the page. This is beacuse the width is variable
