--- a/demo.html
+++ b/demo.html
@@ -64,10 +64,26 @@
 	</div>
       </div>
       </div>
+      </div>
       Look at how it changes when you resize the page. This is beacuse the width is variable
-
-      
-
+      <br>
+  <div class="small-1 small-1 columns">
+        <h5> A button:</h5>
+        <p><a href="#" class="button">Button</a></p>
+      </div>
+  <div class="small-1 small-1 columns">
+        <h5>Another One:</h5>
+        <p><a href="#" class="success button"> Button</a></p>
+      </div>
+      <div class="small-1 small-1 columns">  
+          <h5>Another One:</h5>
+        <p><a href="#" class="alert button"> Button</a></p>
+      </div>
+      <div class="small-1 small-1 columns">
+             <h5>Another One:</h5>
+        <p><a href="#" class="secondary button"> Button</a></p>
+      </div>
+      <br>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
