--- a/demo.html
+++ b/demo.html
@@ -25,6 +25,8 @@
 	also this one
 	</div>
       </div>
+      <center> divs can be given a size depending on the content that goes there </center>
+      <center> <p> small </p> </center>
       <div class="large-12 columns">
 	<div class="small-1 columns" style="background-color:red">
 	  1
@@ -63,26 +65,115 @@
 	  12
 	</div>
       </div>
+      <center> medium </center>
+           <div class="large-12 columns">
+	<div class="medium-1 columns" style="background-color:red">
+	  1
+	</div>
+	<div class="medium-1 columns" style="background-color:blue">
+	  2
+	</div>
+	<div class="medium-1 columns" style="background-color:green">
+	  3
+	</div>
+	<div class="medium-1 columns" style="background-color:yellow">
+	  4
+	</div>
+	<div class="medium-1 columns" style="background-color:purple">
+	  5
+	</div>
+	<div class="medium-1 columns" style="background-color:teal">
+	  6
+	</div>
+	<div class="medium-1 columns" style="background-color:aqua">
+	  7
+	</div>
+	<div class="medium-1 columns" style="background-color:orange">
+	  8
+	</div>
+	<div class="medium-1 columns" style="background-color:lime">
+	  9
+	</div>
+	<div class="medium-1 columns" style="background-color:olive">
+	  10
+	</div>
+	<div class="medium-1 columns" style="background-color:gray">
+	  11
+	</div>
+	<div class="medium-1 columns" style="background-color:brown">
+	  12
+	</div>
+	   </div>
+	   <center> Large </center>
+       <div class="large-12 columns">
+	<div class="large-1 columns" style="background-color:red">
+	  1
+	</div>
+	<div class="large-1 columns" style="background-color:blue">
+	  2
+	</div>
+	<div class="large-1 columns" style="background-color:green">
+	  3
+	</div>
+	<div class="large-1 columns" style="background-color:yellow">
+	  4
+	</div>
+	<div class="large-1 columns" style="background-color:purple">
+	  5
+	</div>
+	<div class="large-1 columns" style="background-color:teal">
+	  6
+	</div>
+	<div class="large-1 columns" style="background-color:aqua">
+	  7
+	</div>
+	<div class="large-1 columns" style="background-color:orange">
+	  8
+	</div>
+	<div class="large-1 columns" style="background-color:lime">
+	  9
+	</div>
+	<div class="large-1 columns" style="background-color:olive">
+	  10
+	</div>
+	<div class="large-1 columns" style="background-color:gray">
+	  11
+	</div>
+	<div class="large-1 columns" style="background-color:brown">
+	  12
+	</div>
+       </div>
+   
       </div>
+</div>
+</div>
+Look at how it changes when you resize the page. This is beacuse the width is variable. Small columns will always keep their horizontal allignment, but medium and large will go down as the page gets smaller to preserve content size.
+
+
+<br>
+
+
+<center>some examples!</center>
+<div class="row">
+<div class="large-12 columns" style="border:1px solid black">
+  <div class="small-3 columns" style="border:1px solid black">
+        A nice button:
+        <a href="#" class="button">Button</a>
       </div>
-      Look at how it changes when you resize the page. This is beacuse the width is variable
-      <br>
-  <div class="small-1 small-1 columns">
-        <h5> A button:</h5>
-        <p><a href="#" class="button">Button</a></p>
+  <div class=" small-3 columns" style="border:1px solid black">
+        Another One:
+        <a href="#" class="success button"> Button</a>
       </div>
-  <div class="small-1 small-1 columns">
-        <h5>Another One:</h5>
-        <p><a href="#" class="success button"> Button</a></p>
+      <div class="small-3 columns" style="border:1px solid black">  
+       Another One:
+      <a href="#" class="alert button"> Button</a>
       </div>
-      <div class="small-1 small-1 columns">  
-          <h5>Another One:</h5>
-        <p><a href="#" class="alert button"> Button</a></p>
+      <div class="small-3 columns" style="border:1px solid black">
+       Another One:
+       <a href="#" class="secondary button"> Button</a>
       </div>
-      <div class="small-1 small-1 columns">
-             <h5>Another One:</h5>
-        <p><a href="#" class="secondary button"> Button</a></p>
-      </div>
+</div>
+</div>
       <br>
 
     <script src="js/vendor/jquery.js"></script>
