--- a/demo.html
+++ b/demo.html
@@ -154,6 +154,20 @@ Look at how it changes when you resize the page. This is beacuse the width is va
 
 
 <center>some examples!</center>
+<div class="show-for-small-only">
+  <div class="row">
+    <div class="large-12 columns">
+      this is a secret that cna only be seen on small screens
+    </div>
+  </div>
+</div>
+<div class="show-for-large-only">
+  <div class="row">
+    <div class="large-12 columns">
+      this is a secret that can only be seen on big screens look what happens when you resize the window
+    </div>
+  </div>
+</div>
 <div class="row">
 <div class="large-12 columns" style="border:1px solid black">
   <div class="small-3 columns" style="border:1px solid black">
@@ -174,7 +188,9 @@ Look at how it changes when you resize the page. This is beacuse the width is va
       </div>
 </div>
 </div>
-      <br>
+<br>
+
+
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
