--- a/demo.html
+++ b/demo.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
   <head>
@@ -8,6 +7,17 @@
     <title>Demo</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
+    <ul class="vertical medium-horizontal menu"  data-responsive-menu="drilldown medium-dropdown" style="width: 300px;">
+  <li><a href="#">This </a></li>
+  <li><a href="#">Is A</a></li>
+  <li><a href="#">Menu</a></li>
+  <li><a href="#">It is</a></li>
+  <li><a href="#">A Good</a></li>
+  <li><a href="#">Menu</a></li>
+   <li><a href="#">You Must</a></li>
+    <li><a href="#">Love It</a></li>
+
+</ul>
   </head>
   <body>
     The way foundation works is it allows you to divide the page into collumns
