--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
     <title>Demo</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
-    <ul class="vertical medium-horizontal menu"  data-responsive-menu="drilldown medium-dropdown" style="width: 300px;">
+    <ul class="vertical medium-horizontal menu"  data-responsive-menu="drilldown small-dropdown" style="width:100%;">
   <li><a href="#">This </a></li>
   <li><a href="#">Is A</a></li>
   <li><a href="#">Menu</a></li>
@@ -20,7 +20,7 @@
 </ul>
   </head>
   <body>
-    The way foundation works is it allows you to divide the page into collumns
+    Foundation is simply some CSS and java files that give you classes to create better web page. The essential part of foundation is the grid system. A div can become a row, and sub-divs can become columns of that row. Each page is a maximum of 12 columns long. The columns resize with the window and align based on how you set them. This allows for sites to look good no matter how large the browser is.
     <div class="row">
       <div class="large-12 columns">
       <div class="small-6 columns">
@@ -157,7 +157,7 @@
       </div>
 </div>
 </div>
-Look at how it changes when you resize the page. This is beacuse the width is variable. Small columns will always keep their horizontal allignment, but medium and large will go down as the page gets smaller to preserve content size.
+Look at how it changes when you resize the page. This is beacuse the width of each column is variable. Small columns will always keep their horizontal allignment, but medium and large will go down as the page gets smaller to preserve content size.
 
 
 <br>
